# OQcap

./: Cargo.toml  README.md  oqcap.desktop
src/: config.rs  main.rs  style.css
